# crustty

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  DISCOVERY.md  LICENSE.md  README.md  TRACKING.md
.github/workflows/: pre-commit.yml  rust.yml
examples/: arithmetic_test.c  default.c  fibonacci.c  parse_error.c  runtime_error.c  scanf_demo.c
src/: lib.rs  main.rs
src/interpreter/: builtins.rs  constants.rs  engine.rs  errors.rs  expressions.rs  heap_serial.rs  jumps.rs  loops.rs  memory_ops.rs  mod.rs  statements.rs  type_system.rs
src/interpreter/ops/: access.rs  assign.rs  binary.rs  mod.rs  structs.rs  unary.rs
src/memory/: heap.rs  mod.rs  stack.rs  value.rs
src/parser/: ast.rs  declarations.rs  expressions.rs  lexer.rs  mod.rs  parse.rs  parser.rs  statements.rs
src/snapshot/: mod.rs
src/ui/: app.rs  mod.rs  panes.rs  theme.rs
src/ui/panes/: heap.rs  input.rs  mod.rs  source.rs  stack.rs  status.rs  terminal.rs  utils.rs
src/ui/panes/utils/: formatting.rs  memory.rs  mod.rs  rendering.rs
tests/: arithmetic_tests.rs  integration_test.rs
