[package]
name = "crustty"
version = "0.5.1"
edition = "2021"
authors = ["Sean Yang <sean@seanyang.me>"]
description = "A time-travel C interpreter with memory visualization"
license = "MIT"
repository = "https://github.com/aicheye/crustty"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
rustc-hash = "2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
